--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+<style>
+	.share_div { width: auto; height: auto; overflow: visible; }
+</style>
+<div class="share_div"><img src="/logo.jpg" /></div>
+
 <div class="search-container">
   <input type="text" id="search-input" placeholder="search blog posts..." style="width: 90%;
     height: 35px;
