--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <style>
 	.share_div { width: auto; height: auto; overflow: visible; }
 </style>
-<div class="share_div"><img src="/logo.jpg" /></div>
+<div class="share_div"><img src="/images/IMG_0546.jpeg?raw=true" /></div>
 
 <div class="search-container">
   <input type="text" id="search-input" placeholder="search blog posts..." style="width: 90%;
