--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <style>
-	.share_div { width: auto; height: auto; overflow: visible; }
+	.share_div{width:0px;height:0px;overflow:hidden;}
 </style>
 <div class="share_div"><img src="/images/IMG_0546.jpeg?raw=true" /></div>
 
