--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <style>
-	.share_div{width:0px;height:0px;overflow:hidden;}
+	.share_div{width:0px;height:0px;overflow:overflow;}
 </style>
 <div class="share_div"><img src="/images/resized_image.png" /></div>
 
