--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <style>
 	.share_div{width:0px;height:0px;overflow:hidden;}
 </style>
-<div class="share_div"><img src="/images/resized_image.png" /></div>
+<div class="share_div"><img src="/images/resized_image.png"></div>
 
 <div class="search-container">
   <input type="text" id="search-input" placeholder="search blog posts..." style="width: 90%;
